--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <img src="logo.png" alt="Durga Online" class="logo" />
 
-  <h1 class="glow">Durga Online</h1>
+  <h1 class="glow">Since 2008</h1>
   <div class="subtitle">Discover Premium Online Entertainment</div>
 
   <a href="https://wa.me/919406587035?text=Hello%20Durga%20Online!%20I%20want%20to%20know%20more." target="_blank" class="btn">
