--- a/index.html
+++ b/index.html
@@ -25,17 +25,25 @@
       align-items: center;
       overflow: hidden;
       text-align: center;
+      padding: 0 15px;
+    }
+
+    .logo {
+      width: 400px;
+      max-width: 80%;
+      animation: fadeIn 2s ease-in-out forwards;
     }
 
     .glow {
-      font-size: 60px;
+      font-size: 50px;
       background: linear-gradient(90deg, #ffd700, #d4af37, #ffd700);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: glowMove 3s infinite linear;
+      animation: glowMove 3s infinite linear, floatUp 5s ease-in-out infinite alternate;
       letter-spacing: 2px;
       font-weight: 700;
       text-shadow: 0 0 30px rgba(255, 215, 0, 0.2);
+      margin-top: 15px;
     }
 
     @keyframes glowMove {
@@ -43,10 +51,15 @@
       100% { background-position: 200%; }
     }
 
+    @keyframes floatUp {
+      0% { transform: translateY(0); }
+      100% { transform: translateY(-10px); }
+    }
+
     .subtitle {
-      font-size: 22px;
+      font-size: 20px;
       color: #80ffcc;
-      margin-top: 10px;
+      margin-top: 12px;
       opacity: 0;
       animation: fadeIn 2s ease-in-out forwards 0.8s;
     }
@@ -62,11 +75,12 @@
       color: #fff;
       padding: 15px 40px;
       border-radius: 50px;
-      font-size: 20px;
+      font-size: 18px;
       text-decoration: none;
       box-shadow: 0 0 25px rgba(37, 211, 102, 0.5);
       transition: all 0.3s ease;
       animation: fadeIn 2s ease-in-out forwards 1.5s;
+      z-index: 2;
     }
 
     .btn:hover {
@@ -80,11 +94,8 @@
       font-size: 14px;
       color: #888;
       letter-spacing: 1px;
-    }
-
-    .logo {
-      width: 500px;
-      animation: fadeIn 2s ease-in-out forwards;
+      text-align: center;
+      width: 100%;
     }
 
     .particles {
@@ -108,6 +119,32 @@
       from { transform: translateY(100vh) scale(0); }
       to { transform: translateY(-10vh) scale(1); opacity: 0; }
     }
+
+    /* Responsive Adjustments */
+    @media (max-width: 768px) {
+      .glow {
+        font-size: 36px;
+      }
+      .subtitle {
+        font-size: 18px;
+      }
+      .btn {
+        font-size: 16px;
+        padding: 12px 28px;
+      }
+      footer {
+        font-size: 12px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .glow {
+        font-size: 32px;
+      }
+      .logo {
+        width: 280px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -125,7 +162,7 @@
   <footer>© 2025 Durga Online. All rights reserved.</footer>
 
   <script>
-    // Generate floating light particles
+    // Generate floating particles dynamically
     const particlesContainer = document.querySelector('.particles');
     for (let i = 0; i < 25; i++) {
       const p = document.createElement('span');
