--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="subtitle">Discover Premium Online Entertainment</div>
 
   <a href="https://wa.me/919406587035?text=Hello%20Durga%20Online!%20I%20want%20to%20know%20more." target="_blank" class="btn">
-    💬 Connect on WhatsApp
+    💬 Customer Support
   </a>
 
   <footer>© 2025 Durga Online. All rights reserved.</footer>
