--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Durga Online | Premium Gaming Experience</title>
+  <title>Durga Online | Premium Digital Platform</title>
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
@@ -90,12 +90,13 @@
 
     footer {
       position: absolute;
-      bottom: 20px;
-      font-size: 14px;
+      bottom: 15px;
+      font-size: 13px;
       color: #888;
       letter-spacing: 1px;
       text-align: center;
       width: 100%;
+      line-height: 1.4;
     }
 
     .particles {
@@ -139,10 +140,10 @@
 
     @media (max-width: 480px) {
       .glow {
-        font-size: 32px;
+        font-size: 30px;
       }
       .logo {
-        width: 280px;
+        width: 260px;
       }
     }
   </style>
@@ -153,13 +154,17 @@
   <img src="logo.png" alt="Durga Online" class="logo" />
 
   <h2 class="glow">Since 2008</h2>
-  <div class="subtitle">Discover Premium Online Entertainment</div>
+  <div class="subtitle">Explore Interactive Digital Experiences</div>
 
-  <a href="https://wa.me/919406587035?text=Hello%20Durga%20Online!%20I%20want%20to%20know%20more." target="_blank" class="btn">
+  <a href="https://wa.me/919406587035?text=Hello%20Team%20Durga!%20I%20want%20to%20learn%20more%20about%20your%20services." 
+     target="_blank" class="btn">
     💬 Customer Support
   </a>
 
-  <footer>© 2025 Durga Online. All rights reserved.</footer>
+  <footer>
+    © 2025 Durga Online. All rights reserved.<br>
+    <small>This platform is for entertainment and informational purposes only.</small>
+  </footer>
 
   <script>
     // Generate floating particles dynamically
